<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvAddNumOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_one" />

    <EditText
        android:id="@+id/etAddNumOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvAddNumTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_two" />

    <EditText
        android:id="@+id/etAddNumTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvAddResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add" />

    <Button
        android:id="@+id/btnAddBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back" />

</LinearLayout>
