<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvSubtractNumOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_one" />

    <EditText
        android:id="@+id/etSubtractNumOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvSubtractNumTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_two" />

    <EditText
        android:id="@+id/etSubtractNumTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvSubtractResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_subtract" />

    <Button
        android:id="@+id/btnSubtractBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back" />

</LinearLayout>
