<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvCounterEnterNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_no" />

    <EditText
        android:id="@+id/etCounterEnterNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvCounterResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />

    <Button
        android:id="@+id/btnCounterIncrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_increament" />

    <Button
        android:id="@+id/btnCounterDecrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_decreament" />

</LinearLayout>
