<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/mobile11">

    <TextView
        android:id="@+id/tvLoginUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name" 
        android:textColor="@color/orange"/>

    <EditText
        android:id="@+id/etLoginUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" 
        android:textColor="@color/orange"/>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/LoginCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:textColor="@color/orange"/>

    <Button
        android:id="@+id/btnLoginToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_toast"
        android:background="@drawable/buttons_style" />

    <Button
        android:id="@+id/btnLoginBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttons_style"
        android:text="@string/btn_back" />

</LinearLayout>
